2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion-flash.spec.in:
	Use the new @PACKAGE_VERSION_RELEASE@ for the release tag

2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/flv/flv.py:
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/encoders/vp6/vp6.py:
	* flumotion/component/muxers/flv/flv.py:
	Reconfigurable encoders and muxers

2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* configure.ac:
	Add muxers/aac/Makefile to configure.ac for generation
	* flumotion/component/muxers/flv/Makefile.am:
	Include the wizard_gtk.py file into dist

2010-01-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/muxers/flv/flv.xml:
	* flumotion/component/muxers/flv/wizard_gtk.py (added):
	Add a check for the fluflvmuxer so it can be used from the conversion
	Step (See pub:r8454)

2010-01-21  Xavier Queralt Mateu <xqueralt@flumotion.com>

	reviewed by: jribass

	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/aac/aac.xml:
	* flumotion/component/encoders/aac/wizard_gtk.py:
	* flumotion/component/muxers/Makefile.am:
	* flumotion/component/muxers/aac (added):
	* flumotion/component/muxers/aac/__init__.py (added):
	* flumotion/component/muxers/aac/Makefile.am (added):
	* flumotion/component/muxers/aac/aac.py (added):
	* flumotion/component/muxers/aac/aac.xml (added):
	New muxer to allow aac audio without a container. Enable ADTS headers
	when AAC format is selected in conversion step.
	Closes #6915

2010-01-21  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/muxers/flv/flv.xml:
	Change flv muxer description in wizard

2009-11-04  Xavier Queralt  <xqueralt@flumotion.com>

	* configure.ac:
	Adapt to changes from pub:r8195

2009-10-15  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/plugs/flashhttp/flashhttp.xml: