@@ -1,3 +1,14 @@
+2010-06-01  Julien Le Goff  <jlegoff@flumotion.com>
+
+	reviewed by: Xavier Queralt  <xqueralt@flumotion.com> 
+
+	* flumotion/component/muxers/flv/flv.py:
+	* flumotion/component/muxers/flv/flv.xml:
+	* flumotion/component/muxers/flv/par_setter.py:
+	* flumotion/component/muxers/flv/par_setter.py (added):
+	Add a property to dynamically force the pixel aspect ratio to 1/1
+	in the flv muxer by modifying the width and height in the caps.
+
 2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	* flumotion-flash.spec.in:
